integration-tests/tests/snapshots/postgres__default_srid_0_0_0.snap
---
source: integration-tests/tests/postgres.rs
expression: "tile_dump(&martin, \"/points_empty_srid/0/0/0\").await"
---
layer: 0
  name: points_empty_srid
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(2162,1836)
    properties:
      gid = 19 (uint)
  feature: 1
    id: (none)
    geometry: POINT(3794,1861)
    properties:
      gid = 9 (uint)
  feature: 2
    id: (none)
    geometry: POINT(3673,1911)
    properties:
      gid = 1 (uint)
  feature: 3
    id: (none)
    geometry: POINT(3673,1911)
    properties:
      gid = 3 (uint)
  feature: 4
    id: (none)
    geometry: POINT(3673,1911)
    properties:
      gid = 2 (uint)
  feature: 5
    id: (none)
    geometry: POINT(2895,1751)
    properties:
      gid = 21 (uint)
  feature: 6
    id: (none)
    geometry: POINT(3287,1621)
    properties:
      gid = 26 (uint)
  feature: 7
    id: (none)
    geometry: POINT(3502,728)
    properties:
      gid = 15 (uint)
  feature: 8
    id: (none)
    geometry: POINT(2724,287)
    properties:
      gid = 18 (uint)
  feature: 9
    id: (none)
    geometry: POINT(2542,1034)
    properties:
      gid = 8 (uint)
  feature: 10
    id: (none)
    geometry: POINT(1861,933)
    properties:
      gid = 20 (uint)
  feature: 11
    id: (none)
    geometry: POINT(1710,567)
    properties:
      gid = 16 (uint)
  feature: 12
    id: (none)
    geometry: POINT(1374,742)
    properties:
      gid = 23 (uint)
  feature: 13
    id: (none)
    geometry: POINT(1597,1155)
    properties:
      gid = 27 (uint)
  feature: 14
    id: (none)
    geometry: POINT(205,254)
    properties:
      gid = 28 (uint)
  feature: 15
    id: (none)
    geometry: POINT(201,1050)
    properties:
      gid = 11 (uint)
  feature: 16
    id: (none)
    geometry: POINT(814,2004)
    properties:
      gid = 25 (uint)
  feature: 17
    id: (none)
    geometry: POINT(1409,2400)
    properties:
      gid = 22 (uint)
  feature: 18
    id: (none)
    geometry: POINT(1830,2877)
    properties:
      gid = 30 (uint)
  feature: 19
    id: (none)
    geometry: POINT(1434,3972)
    properties:
      gid = 12 (uint)
  feature: 20
    id: (none)
    geometry: POINT(665,3173)
    properties:
      gid = 13 (uint)
  feature: 21
    id: (none)
    geometry: POINT(760,4027)
    properties:
      gid = 7 (uint)
  feature: 22
    id: (none)
    geometry: POINT(1115,2500)
    properties:
      gid = 10 (uint)
  feature: 23
    id: (none)
    geometry: POINT(3807,3880)
    properties:
      gid = 4 (uint)
  feature: 24
    id: (none)
    geometry: POINT(3773,3835)
    properties:
      gid = 29 (uint)
  feature: 25
    id: (none)
    geometry: POINT(2488,3388)
    properties:
      gid = 17 (uint)
  feature: 26
    id: (none)
    geometry: POINT(2485,2851)
    properties:
      gid = 6 (uint)
  feature: 27
    id: (none)
    geometry: POINT(4079,2682)
    properties:
      gid = 14 (uint)
  feature: 28
    id: (none)
    geometry: POINT(2191,3251)
    properties:
      gid = 5 (uint)
  feature: 29
    id: (none)
    geometry: POINT(2212,3516)
    properties:
      gid = 24 (uint)
