integration-tests/tests/snapshots/postgres__function_comment_tilejson.snap
---
source: integration-tests/tests/postgres.rs
expression: function_comment
---
{
  "description": "a function source with MixedCase name",
  "name": "function_Mixed_Name",
  "tilejson": "3.0.0",
  "tiles": [
    "http://[ADDR]/function_Mixed_Name/{z}/{x}/{y}"
  ],
  "vector_layers": [
    {
      "fields": {
        "Geom": "",
        "TABLE": ""
      },
      "id": "MixedCase.function_Mixed_Name"
    }
  ]
}
