integration-tests/tests/snapshots/postgres__function_with_jsonb_tilejson.snap
---
source: integration-tests/tests/postgres.rs
expression: with_jsonb
---
{
  "description": "public.function_zxy_query_jsonb",
  "name": "function_zxy_query_jsonb",
  "tilejson": "3.0.0",
  "tiles": [
    "http://[ADDR]/function_zxy_query_jsonb/{z}/{x}/{y}"
  ]
}
